--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,61 +1,132 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}{{parent()}}{% endblock %}
-
 {% block body %}
-{{parent()}}
-           {% if app.user %}
-                <div class="mb-3" style="text-align:right">
-                    <p>Hola {{ app.user.nombre }} ! </p> 
-                    <a href="{{ path('app_logout') }}" style="font-size:10px">Salir</a>
-                </div>
-            {% endif %}
-<div class="container">
-    <div class="row postsRow">
-            <div class="col-md-4 cursor">
-                <div class="bg-white rounded">
-                    <img class="rounded hoverable" src="{{ asset('img/pijamaa.jpg')}}" width="100%" height="450px">
-                </div>
-            </div>
-            <div class="col-md-4 cursor">
-                <div class="bg-white rounded">
-                    <img class="rounded hoverable" src="{{ asset('img/sujetadorR.jpg')}}" width="100%" height="450px">
-                </div>
-            </div>
-            <div class="col-md-4 cursor">
-                <div class="bg-white rounded">
-                    <img class="rounded hoverable" src="{{ asset('img/topp.jpg')}}" width="100%" height="450px">
-                </div>
-            </div>
-        {% for post in pagination %}
-            <div class="col-md-3 cursor">
-                <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
-                    <h5>{{post.name}}</h5>
-                        <div class="align-self-center">
-                            <img class="rounded hoverable" src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="175px">
-                                <div class="text-center">
-                                <p class="my-2 postTextSize"> Antes : <s>{{post.precioAntes}}</s> <span id="colorRed">Ahora : {{post.precio}} €</span>
-                                    <button type="button" class="btn btn-light btn-sm">
-                                        <i class="fas fa-cart-arrow-down"></i>
-                                    </button>
-                                    </p>
-                                </div>
-                                <div class="publicationDate text-center">
-
-                                    <p><i class="far fa-clock" style="color:#000"></i>
-                                     Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
-                                </div>
+{{ parent() }}
+    <div class="wrapper bg-white">
+        <div class="wrap bg-white">
+            <div class="container bg-white">
+                <div class="cd-slider">
+                    <ul>
+                    <li>
+                        <div class="image" style="background-image:url( {{ asset('img/login.jpg') }} );"></div>
+                        <div class="content">
+                        <h2>Colección Lenceria 2020</h2>
+                        <a href="#">Ver todo</a>
                         </div>
-                    <hr>
-                </div>      
-            </div>
-        {% endfor %}
-    </div>
-</div>
-<div class="d-flex justif-content-center">
-    <div class="navigation">
-        {{knp_pagination_render(pagination)}}
-    </div>
-</div>
+                    </li>
+                    <li>
+                        <div class="image" style="background-image:url( {{ asset('img/pijamas.png') }} );"></div>
+                        <div class="content">
+                        <h2>Pijamas Invierno 2020</h2>
+                        <a href="#">Ver todo</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="image" style="background-image:url( {{ asset('img/bikinis.jpg') }} );"></div>
+                        <div class="content">
+                        <h2>Nueva Coleccion Bikinis</h2>
+                        <a href="#">Ver todo</a>
+                        </div>
+                    </li>
+                    </ul>
+                </div> <!--/.cd-slider-->
+                <div class="row postsRow">
+                        <div class="col-md-4 pb-2">
+                            <div class="bg-white rounded  button-container">              
+                                <img class="rounded hoverable" src="{{ asset('img/pijama.jpg')}}" width="100%" height="450px">
+                                <a href="" alt="Pijamas">Pijamas</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 pb-5">
+                            <div class="bg-white rounded button-container">
+                                <img class="rounded hoverable" src="{{ asset('img/sujetador.jpg')}}" width="100%" height="450px">
+                                <a href="" alt="Sujetadores">Lenceria</a>
 
+                            </div>
+                        </div>
+                        <div class="col-md-4 pb-5">
+                            <div class="bg-white rounded  button-container">
+                                <img class="rounded hoverable" src="{{ asset('img/top.jpg')}}" width="100%" height="450px">
+                                <a href="" alt="Tops">Tops</a>
+                            </div>
+                        </div>
+                        <div class="row" id="h1Title">
+                                <h1>Articulos más nuevos</h1>
+                        </div>
+                        {% for post in pagination %}
+                        <div class="col-md-3 cursor transparent end" style="margin-top:5em">
+                            <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
+                                <h5>{{post.name}}</h5>
+                                    <div class="align-self-center ex2">
+                                        <img class="rounded hoverable" src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="175px">
+                                            <div class="text-center">
+                                                <p class="my-2 postTextSize"> Antes : <s>{{post.precioAntes}}</s> <span id="colorRed">Ahora : {{post.precio}} €</span>
+                                                    <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-light btn-sm">
+                                                        <i class="fas fa-cart-arrow-down"></i>
+                                                    </a>
+                                                </p>
+                                            </div>
+                                            <div class="publicationDate text-center">
+
+                                                <p><i class="far fa-clock" style="color:#000"></i>
+                                                Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
+                                            </div>
+                                    </div>
+                                <hr>
+                            </div>      
+                        </div>
+                        {% endfor %}
+                </div>
+            </div>
+            <div class="d-flex justif-content-center">
+                <div class="navigation">
+                    {{knp_pagination_render(pagination)}}
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+            <div class="footercontent row">
+                <div class="col-3" >
+                        <img src="{{ asset('img/hjlogo2.png') }}" class="logo">
+                </div>
+                <div class="col-6 text-center">
+                    <p>El contenido de esta página web está protegido por copyright y es propiedad de HJ</p>
+                    <p>Comercio mayorista</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <p>Web diseñada y creada por : Hongen Shyu Barcel</p>
+                </div>
+                <div class="col-3 nav">
+                    <nav class="navbar footernav">
+                        <ul>
+                            <li class="nav-item">
+                                <a href="{{path('dashboard')}}" >
+                                    <i class="fas fa-home cursor" height="20px"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">
+                                    <i class="fas fa-user userr cursor" id="colorblack"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">
+                                    <i class="fab fa-instagram-square cursor"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>            
+    </footer>
+{% endblock %}
+
+{% block javascripts %}
+{{ parent()}}
+        <script src="{{asset('js/slider.js')}}"></script>
 {% endblock %}
