--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -101,28 +101,13 @@
                     <br>
                     <p>Web diseñada y creada por : Hongen Shyu Barcel</p>
                 </div>
-                <div class="col-3 nav">
-                    <nav class="navbar footernav">
-                        <ul>
-                            <li class="nav-item">
-                                <a href="{{path('dashboard')}}" >
-                                    <i class="fas fa-home cursor" height="20px"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#">
-                                    <i class="fas fa-user userr cursor" id="colorblack"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#">
-                                    <i class="fab fa-instagram-square cursor"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>            
+                <div class="col-3">
+                    <div id="contactfooter">
+                        <p>Tlf de contacto: 644751012</p>
+                        <p>Email: Hongen1993@gmail.com</p>
+                    </div>
+                </div>            
+            </div>
     </footer>
 {% endblock %}
 
