--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -48,6 +48,10 @@ a {
   color: #000;
 }
 
+ul li{
+  text-decoration: none;
+}
+
 *:focus {
   outline: 0;
 }
@@ -476,7 +480,7 @@ footer {
   position: relative;
   bottom: 0;
   z-index: -3;
-  height: 270px;
+  height: 200px;
   background: grey;
 }
 
@@ -484,34 +488,30 @@ footer {
   position: fixed;
   z-index: 1;
   left: 50%;
-  bottom: 60px;
+  bottom: 30px;
   transform: translate(-50%, 0);
   width: 100%;
   padding: 0 50px;
 }
-
+#contactfooter{
+  margin-top:4em;
+  margin-left: 8em;
+  font-size: 0.8em;
+  }
 .end {
   margin-bottom: 35px;
 }
 
-.fa-home {
-  font-size: 20px;
-  z-index: 5;
-}
-
-.fa-instagram-square {
-  font-size: 20px;
-  z-index: 5;
-}
-
-.userr {
-  font-size: 20px;
-}
 
 /* minilogin */
 .minilogin {
   right: 30%;
   width: 115px;
 }
+
+.userStats{
+  margin:3em 15em;
+  font-size: 1.5em;
+  }
 
 /*# sourceMappingURL=stylesheet.css.map */
