--- a/templates/security/minilogin.html.twig
+++ b/templates/security/minilogin.html.twig
@@ -13,10 +13,15 @@
 	        <div class="col-md-9">
                 <form method="post">
                     {% if app.user %}
-                    <div class="mb-1" style="text-align:right">
-                        <p>Bienvenido {{ app.user.nombre }} ! </p> 
-                        <a href="{{ path('app_logout') }}" style="font-size:10px">Salir</a>
-                    </div>
+                        <div class="mb-3" style="text-align:right">
+                            <p>Bienvenido {{ app.user.nombre }}  </p>
+                            <hr>
+                            <a href="{{ path('user_index', {'id': app.user.id} )}}">Cuenta</a>
+                            <hr>
+                            <a href="{{ path('user_editar', {'id': app.user.id} )}}">Ajustes</a>
+                            <hr>
+                            <a href="{{ path('app_logout') }}" style="font-size:10px">Salir</a>
+                        </div>
                     {% else %}
                     <div class="form-group">
                     <label for="inputEmail">Correo electronico</label>
