--- a/templates/posts/administrador.html.twig
+++ b/templates/posts/administrador.html.twig
@@ -1,27 +1,44 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}    {{parent()}} - Categoría{% endblock %}
-
+{% block title %}    {{parent()}} - Administrador {% endblock %}
 {% block body %}
-    {{parent()}} 
+{{parent()}}
 <div class="wrapper bg-white">
     <div class="wrap bg-white">
-        <h4>Categoría</h4>
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <th>Id</th>
-                        <td>{{ category.id }}</td>
-                        <th>Nombre</th>
-                        <td>{{ category.name }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        <a href="{{ path('category_index') }}">Regresar </a>
-        /
-        <a href="{{ path('category_edit', {'id': category.id}) }}"> Editar</a>
+        <h2>Cuenta Administrador</h2>
+        <div class="row">
+            <div class="col-3">
+                <h4>Categorias</h4>
+                    <p><a href="{{path('category_index')}}">Todas las Categorias</a></p>
+                    <p><a href="{{path('category_new')}}">Añadir Categoria</a></p>
+            </div>
+            <div class="col-3">
+                <h4>Posts</h4>
+                    <p><a href="{{path('posts_new')}}">Crear nuevo Post</a></p>
 
-        {{ include('category/_delete_form.html.twig') }}
+            </div>
+        </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
     </div>
 </div>
 <footer>
