--- a/templates/registro/show.html.twig
+++ b/templates/registro/show.html.twig
@@ -3,65 +3,98 @@
 
 {% block body %}
     {{parent()}} 
-<h3>Cuenta usuario</h3>
-<hr>
-<br>
-<h5><span style = "text-decoration: underline;"> Informacion personal</span></h5>
-<div class="userStats">
-        <form>
+<div class="wrapper bg-white">
+    <div class="wrap bg-white">
+             <div class="adminbutton" onclick="window.location.href='/administrador'" data-hover="Only for Admin ">
+                    <div>
+                        Cuenta de Usuario
+                    </div>
+            </div>  
+        <hr>
         <br>
-          <div class="row">
-              <div class="col-md-4">
-                  <label>ID de Usuario</label>
-                      <input placeholder="{{ user.id }}" class=".form-control-plaintext" readonly>
-              </div>
-              <div class="col-md-4">
-                  <label>Nombre de Usuario</label>
-                      <input placeholder="{{ user.nombre }}" readonly>
-              </div>
-              <div class="col-md-4">
-                  <label>Apellidos </label>
-                      <input placeholder="{{ user.apellidos }}" readonly>
-              </div>
-          </div>
-          <br>
-          <div class="row">
-              <div class="col-md-6">
-                <label>Fecha de nacimiento</label>
-                    <input placeholder="{{ user.fechanacimiento | date}}" readonly>
-              </div>
-              <div class="col-md-6">
-                  <label>Correo electronico</label>
-                    <input placeholder="{{ user.email }}" readonly>
-              </div>
-          </div>
-          <br>
-          <div class="row">
-              <div class="col-md-6">
-                  <label>Numero de Telefono</label>
-                    <input placeholder="{{ user.numerotelefono }}" readonly>
-              </div>
-              <div class="col-md-6">
-                  <label>Provincia</label>
-                    <input placeholder="{{ user.provincia }}" readonly>
-              </div>
-          </div>
-          <br>
-          <div class="row">
-              <div class="col-md-6">
-                  <label>Codigo Postal</label>
-                    <input placeholder="{{ user.codigopostal }}" readonly>
-              </div>
-              <div class="col-md-6">
-                <label>Dirección</label>
-                    <input placeholder="{{ user.direccion }}" readonly>
-              </div>
-          </div>
-          <br>
-        </form>
-        <a href="{{ path('user_editar', {'id': user.id}) }}"> Editar</a>
-          /
-        <a href="{{ path('dashboard') }}">Salir </a>
+        <h5><span style = "text-decoration: underline;"> Informacion personal</span></h5>
+        <div class="userStats">
+            <form>
+            <br>
+            <div class="row">
+                <div class="col-md-4">
+                    <label>ID de Usuario</label>
+                        <input placeholder="{{ user.id }}" class=".form-control-plaintext" readonly>
+                </div>
+                <div class="col-md-4">
+                    <label>Nombre de Usuario</label>
+                        <input placeholder="{{ user.nombre }}" readonly>
+                </div>
+                <div class="col-md-4">
+                    <label>Apellidos </label>
+                        <input placeholder="{{ user.apellidos }}" readonly>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <label>Fecha de nacimiento</label>
+                        <input placeholder="{{ user.fechanacimiento | date}}" readonly>
+                </div>
+                <div class="col-md-6">
+                    <label>Correo electronico</label>
+                        <input placeholder="{{ user.email }}" readonly>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <label>Numero de Telefono</label>
+                        <input placeholder="{{ user.numerotelefono }}" readonly>
+                </div>
+                <div class="col-md-6">
+                    <label>Provincia</label>
+                        <input placeholder="{{ user.provincia }}" readonly>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <label>Codigo Postal</label>
+                        <input placeholder="{{ user.codigopostal }}" readonly>
+                </div>
+                <div class="col-md-6">
+                    <label>Dirección</label>
+                        <input placeholder="{{ user.direccion }}" readonly>
+                </div>
+            </div>
+            <br>
+            </form>
+            <a href="{{ path('user_editar', {'id': user.id}) }}"> Editar</a>
+            /
+            <a href="{{ path('dashboard') }}">Salir </a>
+            </div>
         </div>
+        <br>
+        <hr>
+        <br>
+        <br>
+    </div>
 </div>
+<footer>
+    <div class="footercontent row">
+        <div class="col-3" >
+                <img src="{{ asset('img/hjlogo2.png') }}" class="logo">
+        </div>
+        <div class="col-6 text-center">
+            <p>El contenido de esta página web está protegido por copyright y es propiedad de HJ</p>
+             <p>Comercio mayorista</p>
+            <br>
+            <hr>
+            <br>
+            <p>Web diseñada y creada por : Hongen Shyu Barcel</p>
+           </div>
+           <div class="col-3">
+               <div id="contactfooter">
+                   <p>Tlf de contacto: 644751012</p>
+                <p>Email: Hongen1993@gmail.com</p>
+               </div>
+           </div>            
+       </div>
+</footer>
 {% endblock %}
