--- a/templates/registro/show.html.twig
+++ b/templates/registro/show.html.twig
@@ -12,7 +12,7 @@
             </div>  
         <hr>
         <br>
-        <h5><span style = "text-decoration: underline;"> Informacion personal</span></h5>
+        <h5><span style = "text-decoration: underline;"> Información personal</span></h5>
         <div class="userStats">
             <form>
             <br>
